# opanel

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README-zh.md  README.md  ThirdPartyNotices.txt  build.gradle  gradle.properties  settings.gradle
.github/ISSUE_TEMPLATE/: 1-bug-zh.yml  2-feature-zh.yml  3-bug-en.yml  4-feature-en.yml  config.yml
.github/scripts/: upload-jars.mjs
.github/workflows/: build.yml  (+2 more)
core/: build.gradle
fabric-1.19/: build.gradle
fabric-1.19.4/: build.gradle
fabric-1.20.2/: build.gradle
fabric-1.20.3/: build.gradle
fabric-1.21.11/: build.gradle
fabric-26.1/: build.gradle
fabric-helper/: build.gradle
fabric-helper-unmapped/: build.gradle
folia-1.20/: build.gradle
folia-1.20.5/: build.gradle
folia-1.21/: build.gradle
folia-1.21.11/: build.gradle
forge-1.19.4/: build.gradle
forge-1.20.2/: build.gradle
forge-1.21.8/: build.gradle
forge-1.21.9/: build.gradle
forge-26.1/: build.gradle
forge-helper/: build.gradle
frontend/: env.d.ts  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
frontend/wasm-lib/: Cargo.toml
frontend/wasm-lib/codegen/: colors.txt
frontend/wasm-lib/map-renderer/: lib.rs  render.rs
frontend/wasm-lib/tests/: decode.rs  render.rs
neoforge-1.21.1/: build.gradle  gradle.properties
neoforge-1.21.3/: gradle.properties
neoforge-1.21.5/: gradle.properties
neoforge-helper/: build.gradle  gradle.properties
spigot-1.19.4/: build.gradle
spigot-1.20.5/: build.gradle
spigot-26.1/: build.gradle
(+857 files in other folders)
