[package]
name = "wasm-lib"
version = "0.1.0"
edition = "2024"
build = "codegen/build.rs"

[lib]
path = "map-renderer/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
phf = "0.11"
console_error_panic_hook = { version = "0.1", optional = true }
log = "0.4"
wasm-logger = "0.2"

[build-dependencies]
phf_codegen = "0.11"

[features]
default = ["console_error_panic_hook"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
